fix: [CDS-68413]: branch details truncated in create mode (#15512)

--- a/src/modules/70-pipeline/components/RunPipelineModal/RunPipelineForm.module.scss
+++ b/src/modules/70-pipeline/components/RunPipelineModal/RunPipelineForm.module.scss
@@ -280,3 +280,7 @@
 .noInputSetSelectionRunPipeline {
   padding-top: var(--spacing-small) !important;
 }
+
+.runPipelineBranchDetails {
+  width: auto;
+}
